# llm-lab

./: .gitignore  AGENTS.md  README.md  index.md  package-lock.json  package.json  pyproject.toml
 math/matrix/: Lp_norm_matrix_norm.ipynb  spectral_norm.ipynb
.github/workflows/: deploy.yml
.vitepress/: config.ts
.vitepress/theme/: HomeLanding.vue  index.ts  style.css
basis/: 01_grad_descent_details_visualization.ipynb  derivative_partial_directional.ipynb  xgboost.md
math/: convex_function_jensen_inequality.ipynb
math/matrix/: rotation matrix.ipynb
math/prob_stats/: kl_div_basics.ipynb  pytorch_kl_div_examples.ipynb
optim/: lr_scheduler.ipynb
optim/.ipynb_checkpoints/: lr_scheduler-checkpoint.ipynb
optimizer/: README.md  adadelta_adam.ipynb  adagrad_rmsprop.ipynb  index.md  l2_reg_weight_decay_adaw.ipynb  lr_scheduler.ipynb  pytorch_as_a_general_optimizer.ipynb
roadmap/: how_to_learn_llm.md  how_to_learn_rl.md  llm_link.md  modern_ai_for_beginners.md
